# XOA

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md  follow-up.md
.github/workflows/: ci.yml
Documentation/: XOA-DEVPLAN.md  XOA-OSC-MAP.md  XOA-PLAN.md  XOA_PRD.md
Resources/lang/: en.json  fr.json
Source/: InputListComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  SpeakerListComponent.h  XoaConstants.h
Source/Accessibility/: TTSManager.h
Source/App/: AppShell.cpp  AppShell.h  HeaderBar.cpp  HeaderBar.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h  DecoderRebuildWorker.h  FilePlayer.cpp  FilePlayer.h  SpeakerCompParams.h  SpeakerCompProcessor.h  TestSceneGenerator.h  TestSignalGenerator.h
Source/DSP/: AmbiAllRAD.h  AmbiBusAlgorithm.h  AmbiCalculationEngine.cpp  AmbiCalculationEngine.h  AmbiConventions.h  AmbiDecoderDesigner.h  AmbiEncoder.h  AmbiMirror.h  AmbiNFCFilter.h  AmbiNfcTables.h  AmbiOrderWeights.h  AmbiRotation.h  AmbiRtTypes.h  AmbiRvReAnalysis.h  AmbiSphericalHarmonics.h  AmbiVBAP.h  ConvexHull.cpp  ConvexHull.h  DecoderMatrixBuilder.h  TDesignTables.h  XoaLinearAlgebra.h
Source/GUI/: ChannelRail.h  ColorScheme.h  ColorUtilities.h  ColumnFocusTraverser.h  GuiKitCompileCheck.cpp  HelpCard.h  StatusBar.h  WindowUtils.h  WindowUtils.mm  XoaHelpCards.h  XoaLookAndFeel.h  XoaTabbedComponent.h
Source/GUI/Analysis/: RvReAnalysisCore.h  RvReAnalysisService.h  RvReMapComponent.h
Source/GUI/Binding/: InputNudger.h  ParamBindings.h  TabParameterRegistry.h  UiParameterDescriptors.h
Source/GUI/Layout/: SpeakerLayoutGenerators.h  SpeakerLayoutPanel.cpp  SpeakerLayoutPanel.h
Source/GUI/Map3D/: Map3DView.cpp  Map3DView.h
Source/GUI/Selection/: InputSelectionModel.h
Source/GUI/Tabs/: InputsTab.cpp  InputsTab.h  MapTab.h  MonitoringTab.h  NetworkTab.cpp  NetworkTab.h  SpeakersDecoderTab.cpp  SpeakersDecoderTab.h  SystemConfigTab.cpp  SystemConfigTab.h  TabPage.h
Source/GUI/Widgets/: CountdownTextButton.h  EQBandToggle.h  LongPressButton.h  RigProjection.h  WrappingTextButton.h  XoaAutoCenterSlider.h  XoaBasicDial.h  XoaBidirectionalSlider.h  XoaEndlessDial.h  XoaLevelMeterBar.h  XoaRangeSlider.h  XoaRotationDial.h  XoaSliderBase.h  XoaStandardSlider.h  XoaThreadPerformanceBar.h
Source/Helpers/: XoaCoordinates.h
Source/JuceHeaderStub/: JuceHeader.h
Source/Localization/: LocalizationManager.cpp  LocalizationManager.h
Source/Network/: OSCManager.cpp  OSCManager.h  OSCMessageRouter.h
Source/Parameters/: XoaConstraints.h  XoaFileManager.cpp  XoaFileManager.h  XoaParameterDefaults.h  XoaParameterIDs.h  XoaValueTreeState.cpp  XoaValueTreeState.h
tests/: CMakeLists.txt  XoaBusTests.cpp  XoaCalcEngineTests.cpp  XoaCompTests.cpp  XoaDecoderTests.cpp  XoaEncoderTests.cpp  XoaEngineTests.cpp  XoaFilePlayerTests.cpp  XoaLayoutGeneratorTests.cpp  XoaLocalizationTests.cpp  XoaNfcTests.cpp  XoaOscManagerTests.cpp  XoaOscRouterTests.cpp  XoaParameterTests.cpp  XoaRotationTests.cpp  XoaRvReViewTests.cpp  XoaSceneTests.cpp  XoaShTests.cpp  XoaTestFramework.h  XoaTestSignalTests.cpp  XoaTests.cpp  XoaUiDescriptorTests.cpp  XoaVbapTests.cpp
tests/data/: decoder_reference.json  fuma_reference.json  nfc_reference.json  order_weights.json  rotation_reference.json  sh_quadrature.json  sh_reference.json  wfs_outputs_fixture.xml
tools/: setup.sh
tools/reference/: README.md  gen_bessel_roots.py  gen_decoder_reference.py  gen_fuma_reference.py  gen_maxre_weights.py  gen_nfc_reference.py  gen_rotation_reference.py  gen_sh_quadrature.py  gen_sh_reference.py  gen_tdesign_tables.py  shref_common.py  tdesign_data.json
tools/validation/control-replay/: README.md  osc_lib.py  osc_replay.py
tools/validation/control-replay/goldens/: osc_replay.json
tools/validation/offline-render/: CMakeLists.txt  main.cpp  scenarios.h  sha256.h
tools/validation/offline-render/baselines/: README.md  win-dev.json
